<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_marginTop="-25dp"
        android:layout_marginBottom="-15dp"
        >
        <ImageView
            android:id="@+id/imgView"
            android:layout_width="50dp"
            android:layout_height="65dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:src="@drawable/seatlogo"
            />
        <TextView
            android:layout_width="70dp"
            android:layout_height="125dp"
            android:textSize="20dp"
            android:text="Map"
            android:fontFamily="@font/dmsans"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <LinearLayout
            android:id="@+id/filtersLayout"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="35dp"
            android:layout_marginRight="40dp"
            app:cornerRadius="20dp"
            android:background="@color/white"
            android:padding="5dp"
            >


            <ImageView
                android:id="@+id/openNow"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/opennowunselected"
                android:visibility="invisible"
                android:onClick="clickOpenNow"
                android:foregroundGravity="right"
                />

            <ImageView
                android:id="@+id/favorites"
                android:layout_marginLeft="10dp"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/favoritesunselected"
                android:visibility="invisible"
                android:onClick="clickFavorites"
                />

            <ImageView
                android:id="@+id/filterToggle"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/filter"
                android:onClick="clickToggle"

                />
        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/root_view"
        android:layout_width="fill_parent"
        android:layout_height="590dp"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="-15dp"
        android:layout_marginBottom="15dp">

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:map="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MapsActivity"
            />

        <LinearLayout
            android:id="@+id/overlay"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="vertical"
            android:layout_marginBottom="10dp"
            android:background="@android:color/white"
            android:padding="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:visibility="gone"
            android:elevation="10dp"
            app:cornerRadius="10dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp">
                <androidx.core.widget.NestedScrollView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="270dp"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/map"
                        android:fontFamily="@font/dmsans"
                        android:text="Taper Hall"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        android:id="@+id/buildingName"
                        android:layout_marginBottom="1dp"
                        />
                </androidx.core.widget.NestedScrollView>
                <ImageView
                    android:id="@+id/heart"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="15dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/unfilledheart"
                    android:onClick="clickHeart"
                    android:tag="unfilled"

                    />
            </LinearLayout>


            <androidx.core.widget.NestedScrollView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="300dp"
                android:layout_height="75dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dmsans"
                    android:text="Taper Hall is a common classroom and workspace for students. It is a quiet building with 3 floors and located near the main USC campus entrance."
                    android:textColor="#737373"
                    android:textSize="15dp"
                    android:id="@+id/buildingDescription"
                    android:layout_marginBottom="3dp"
                    />
            </androidx.core.widget.NestedScrollView>


            <Button
                android:id="@+id/buttonReserve"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:layout_marginTop="5dp"
                android:backgroundTint="#8A00C2"
                android:fontFamily="@font/dmsans"
                android:text="Make Reservation"
                android:textSize="15dp"
                android:textAllCaps="false"

                android:textColor="@color/white"
                android:onClick="clickButton"
                app:cornerRadius="10dp"

                />
        </LinearLayout>



    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="-35dp"
        android:visibility="visible"
        android:layout_height="100dp">

        <ImageView
            android:id="@+id/nav1"
            android:layout_width="205dp"
            android:layout_height="100dp"
            android:onClick="toMapScreen"
            android:src="@drawable/navbar2" />

        <ImageView
            android:id="@+id/nav2"
            android:layout_width="205dp"
            android:layout_height="100dp"
            android:src="@drawable/navbarprof1"
            android:onClick="toProfileScreen"/>
    </LinearLayout>
</LinearLayout>