...

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/errorMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="3dp"
        android:fontFamily="@font/dmsans"
        android:gravity="center"
...
