...
                android:layout_marginTop="0dp"
                android:layout_height="1dp"
                android:id="@+id/separator3"
                android:visibility="visible"
                android:background="#868686"/>
            <Button
                android:id="@+id/buttonLogOut"
                android:layout_width="90dp"
                android:padding="0dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"
                android:layout_height="35dp"
...
                app:strokeColor = "#000000"
                app:strokeWidth="1dp"
                android:textSize="13sp"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:onClick="logOut"
                android:text="Log out"
                android:textColor="#000000"
                android:fontFamily="@font/dmsans"
                app:cornerRadius="6dp" />



...
